--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <a href="index.html">
             <h1 id="logo">Love Running</h1>
         </a>
-        <nav id="menu">
-            <ul>
+        <nav>
+            <ul id="menu">
                 <li>
                     <a href="#">Sign Up</a>
                 </li>
@@ -39,7 +39,7 @@
         </div>
     </section>
     <section id="club-ethos">
-        <h1>Why Love Running With Us?</h1>
+        <h2 id="welcome">Why Love Running With Us?</h2>
         <div id="left-about">
             <div class="left-about-heading">
                 <h2>Feel Healthy</h2>
