--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Love Running club for runners in Dublin, Ireland">
     <meta name="keywords" content="love running, running club, ireland, dublin">
@@ -45,14 +44,16 @@
                 <h2>Feel Healthy</h2>
                 <hr>
                 <p>
-                    Since it improves aerobic fitness, running is a great way to help improve your cardiovascular health. Plus, it burns calories and can build strength.
+                    Since it improves aerobic fitness, running is a great way to help improve your cardiovascular
+                    health. Plus, it burns calories and can build strength.
                 </p>
             </div>
             <div class="left-about-heading">
                 <h2>Feel Free</h2>
                 <hr>
                 <p>
-                    Physical exercise, running included, is known to release endorphins in the brain. Endorphins make you more energetic, more awake and, yes, happier.
+                    Physical exercise, running included, is known to release endorphins in the brain. Endorphins make
+                    you more energetic, more awake and, yes, happier.
                 </p>
             </div>
         </div>
@@ -61,7 +62,8 @@
                 <h2>Get Social</h2>
                 <hr>
                 <p>
-                    When we run with others, we can run farther and faster more easily. Social running can pull you out of a running funk or low mood, inspire you to try new events
+                    When we run with others, we can run farther and faster more easily. Social running can pull you out
+                    of a running funk or low mood, inspire you to try new events.
                 </p>
             </div>
             <div class="right-about-heading">
@@ -72,13 +74,17 @@
                 </p>
             </div>
         </div>
-        <div id="center-about">Center</div>
+        <div id="center-about">
+            <div id="circle-container">
+                <div id="circle-cover-bg"></div>
+            </div>
+        </div>
     </section>
     <section>
         Running locations, distances and times
     </section>
     <footer>
-        Social links here
+        social links here
     </footer>
 </body>
 
